[package]
name = "proxygh"
version = "0.1.0"
edition = "2024"

# 静态编译配置
[profile.release]
pie = true
strip = true
lto = true

[dependencies]
axum = "0.7.9"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
http-body-util = "0.1.3"
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "webpki-roots", "http2"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
bytes = "1.11.0"
rustls = { version = "0.23.35", features = ["ring"] }
url = "2.5.7"
dotenv = "0.15.0"

